# TaoQuick

./: .clang-format  .clang-format-all  .gitattributes  .gitignore  .gitmodules  .qmake.conf  .travis.yml  CMakeLists.txt  Install-en.md  Install.md  LICENSE  README-en.md  README-zh.md  README.md  TaoQuick.pro  TaoQuick.sln  _clang-format  appveyor.yml  clang-foramt-All.ps1  taoVersionInfo.h  入门指南.md
.github/workflows/: android-arm64_v8a-qt5_12_10.yml  android-qt5_15_2.yml  android-qt5_15_2.yml-  android.yml  android.yml.origin  ios-macos-11_0.yml  ios-macos-11_0.yml-  ios-macos11_0-qt5_12_10.yml  ios-macos11_0-qt5_15_2.yml  ios.yml  ios.yml.origin  macos-11_0.yml  macos.yml  macos.yml.origin  macos10_15-qt5_15_2.yml  macos10_15-qt5_9_9.yml  macos11_0-qt5_12_10.yml  macos11_0-qt5_15_2.yml  macos11_0-qt5_9_9.yml  ubuntu.yml  ubuntu.yml.origin  ubuntu20_04-qt5_12_10.yml  ubuntu20_04-qt5_15_2.yml  ubuntu20_04-qt5_9_9.yml  windows-2019.yml  (+3 more)
Common/: BundleCommon.pri  TaoVersion.pri
MarketPlace/: TaoQuick_descript.md  TaoQuick_manifest.json
TaoQuick/: Qml.qrc  TaoQuick.pro  qmldir
TaoQuickDemo/: App.rc  TaoQuickDemo.pro  Ver.h
cmake/: taoCommon.cmake  taoQuick.cmake  taoVersion.cmake
examples/: CMakeLists.txt  examples.pro
examples/HelloTaoQuick2/: CMakeLists.txt  main.cpp  main.qml  taoQuick.cmake
examples/TaoQuickShow/: App.rc  CMakeLists.txt  Contents.qrc  Image.qrc  Languages.qrc  Qml.qrc  TaoPlugin.pri  TaoQuickShow.pri  TaoQuickShow.pro  TaoQuickShow.vcxproj  TaoQuickShow.vcxproj.filters  Ver-u16.h  Ver-u8.h  milk.icns  taoMacro.h  trnas.ps1
examples/TaoQuickShow/Contents/: DataEntrys.qml  Drags.qml  Images.qml
examples/TaoQuickShow/Contents/Animation/: AnimationBase.qml  Board.qml  Circle.qml  Cleavage.qml  Cross.qml  Diagonal.qml  Dissolve.qml  Enter.qml  Grad.qml  Louver.qml  Rhombus.qml  Square.qml  Wheel.qml
examples/TaoQuickShow/Contents/BaseComponent/: Dialogs.qml  Drags.qml  Gradiants.qml  Progresses.qml
examples/TaoQuickShow/Contents/Buttons/: Buttons.qml
examples/TaoQuickShow/Contents/Effect/: ARound.qml  Arrow.qml  EditJoggle.qml  RingPage.qml  SoundByte.qml  Swapper.qml
examples/TaoQuickShow/Contents/Effect/Effects/: TAround.qml  TArrow.qml  TRingPage.qml  TSoundByte.qml
examples/TaoQuickShow/Contents/General/: Buttons.qml  DataEntrys.qml  Drags.qml  EdgeTabBar.qml  Images.qml  Labels.qml  ListViewWithTab.qml  Miscs.qml  RoundRects.qml  Shapes.qml  Tables.qml
examples/TaoQuickShow/Contents/PageSwitch/: Board.qml  Circle.qml  Cleavage.qml  Cross.qml  Diagonal.qml  Dissolve.qml  FadeInOut.qml  Grad.qml  Louver.qml  PageSwitchBase.qml  Rhombus.qml  Sector.qml  Square.qml  Wheel.qml
examples/TaoQuickShow/Contents/ShaderEffect/: CloudHole.qml  Planet.qml  Snail.qml  SuperMario.qml
examples/TaoQuickShow/Contents/Shape/: KLine.qml  RoundRect.qml
examples/TaoQuickShow/Contents/ShapeGallery/: ShapeBezier.qml  ShapeCapStyles.qml  ShapeCircle.qml  ShapeCubicBezier.qml  ShapeEllipse.qml  ShapeEllipticalArc.qml  ShapeJoinStyles.qml  ShapeQuadraticBezier.qml  ShapeRectrangle.qml  ShapeTriangle.qml
examples/TaoQuickShow/Contents/old/Animation/: Cleavage.qml  Dissolve.qml  Enter.qml  Rhombus.qml
examples/TaoQuickShow/Contents/old/BaseComponent/: Dialogs.qml
examples/TaoQuickShow/Contents/old/Effect/: Swapper.qml
examples/TaoQuickShow/Contents/old/Effect/Effects/: TSwapper.qml
examples/TaoQuickShow/Contents/old/PageSwitch/: Circle.qml  Cleavage.qml  FadeInOut.qml  Rhombus.qml
examples/TaoQuickShow/Contents/old/Shape/: KLine.qml
examples/TaoQuickShow/Plugins/TaoEffectPlugin/Qml/ContentPage/Animation/: Board.qml  Rhombus.qml
examples/TaoQuickShow/Plugins/TaoEffectPlugin/Qml/ContentPage/Effect/: Arrow.qml
examples/TaoQuickShow/Plugins/TaoEffectPlugin/Qml/ContentPage/Effect/Effects/: TArrow.qml
examples/TaoQuickShow/Plugins/TaoEffectPlugin/Qml/ContentPage/PageSwitch/: Grad.qml  Wheel.qml
examples/TaoQuickShow/Plugins/TaoEffectPlugin/Qml/ContentPage/Shape/: RoundRect.qml
examples/TaoQuickShow/Plugins/TaoEffectPlugin/Src/: EffectsPlugin.cpp  EffectsPlugin.h
examples/TaoQuickShow/Plugins/TaoQuickPlugin/Qml/Contents/BaseComponent/: Progresses.qml
examples/TaoQuickShow/Plugins/TaoQuickPlugin/Src/: TaoQuickPlugin.h
examples/TaoQuickShow/Qml/: MainPage.qml  Splash.qml  TBusyIndicator.qml  main.qml  main.qmlc  main.qmlc.H12460  main.qmlc.p16684
examples/TaoQuickShow/Qml/Biz/: BackBtn.qml  CircleText.qml  CloseBtn.qml  CompBtn.qml  CompCard.qml  ExpandBtn.qml  LangBtn.qml  SkinBtn.qml  TText.qml
examples/TaoQuickShow/Qml/Dialog/: AboutDialog.qml  SettingsDialog.qml
examples/TaoQuickShow/Qml/Page/: AboutDialog.qml  ContentData.qml  ContentPage.qml  ControlsShow.qml  Home.qml  LeftPane.qml  MenuPage.qml  NotifyBox.qml  RightPane.qml  SettingsDialog.qml  TitlePage.qml
examples/TaoQuickShow/Qml/Page/Biz/: BackBtn.qml  Background.qml  CloseBtn.qml  CompBtn.qml  CompCard.qml  CompDetail.qml  LangBtn.qml  SkinBtn.qml  TText.qml
examples/TaoQuickShow/Qml/Pane/: ContentModel.qml  LeftPane.qml  RightPane.qml  TitlePane.qml
examples/TaoQuickShow/Src/: AppInfo.cpp  AppInfo.h  ComponentsManager.cpp  ComponentsManager.h  ITaoQuickPlugin.h  PluginLoader.cpp  SimpleFramelessView.cpp  SimpleFramelessView.h  TaoFrameLessView.cpp  TaoFrameLessView.h  TaoFramework.cpp  TaoFramework.h  TaoObject.h  TaoView.cpp  TaoView.h  Trans.cpp  Trans.h  main.cpp  stdafx.h
examples/TaoQuickShow/Src/DeviceAdd/: DeviceAddItem.cpp  DeviceAddItem.h  DeviceAddModel.cpp  DeviceAddModel.h
examples/TaoQuickShow/Src/DeviceAddTable/: DeviceAddItem.cpp  DeviceAddItem.h  DeviceAddModel.cpp  DeviceAddModel.h
examples/TaoQuickShow/Trans/: keys.json  language_cht.json  language_cs.json  language_de.json  language_fin.json  language_fra.json  language_hu.json  language_jp.json  language_nl.json  language_pl.json  language_rom.json  language_ru.json  language_slo.json  language_swe.json  language_yue.json  language_zh.json
scripts/: manulaDeployment.bat  windows-publish.ps1
src/: TaoBundle.pri  TaoQuick.pri  TaoVersion.pri  src.pro  taoQuick.cmake  taoQuick.props
(+517 files in other folders)
